<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_thunbnail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:clickable="true"
            card_view:cardBackgroundColor="#d5ffffff"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/image_add_book"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                tools:background="@drawable/content_thumbnail"
                />
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/txt_add_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/card_view_thunbnail"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:padding="10dp"
            tools:text="@string/booktitle"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/txt_add_book_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_add_book_title"
            android:layout_margin="12dp"
            android:layout_toRightOf="@+id/card_view_thunbnail"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:padding="10dp"
            tools:text="@string/book_authors" />

        <TextView
            android:id="@+id/txt_add_book_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_thunbnail"
            android:layout_margin="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/addbookabout"
            android:textSize="15sp" />


        <android.support.v7.widget.CardView
            android:id="@+id/card_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_add_book_description"
            android:clickable="true"
            card_view:cardBackgroundColor="#d5ffffff"
            card_view:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/txt_add_book_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:fontFamily="sans-serif-normal"
                    android:gravity="left"
                    android:padding="10dp"
                    tools:text="@string/boo_description" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/txt_add_book_features_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_description"
            android:layout_margin="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/featuresdetails"
            android:textSize="15sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_feature_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_add_book_features_details"
            android:clickable="true"
            card_view:cardBackgroundColor="#d5ffffff"
            card_view:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_add_book_publishedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"

                    android:text="@string/publishedDate" />

                <TextView
                    android:id="@+id/txt_add_book_publishedDate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txt_add_book_publishedDate"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/txt_add_book_publishedDate"
                    android:fontFamily="sans-serif-normal"
                    android:padding="5dp"
                    tools:text="2005" />


                <TextView
                    android:id="@+id/txt_add_book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_add_book_publishedDate"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="Publisher" />

                <TextView
                    android:id="@+id/txt_add_book_publisher_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txt_add_book_publisher"
                    android:layout_below="@+id/txt_add_book_publishedDate"
                    android:layout_marginRight="12dp"
                    android:layout_toRightOf="@+id/txt_add_book_publisher"
                    android:fontFamily="sans-serif-normal"
                    android:padding="5dp"
                    tools:text="Random House LLC" />

                <TextView
                    android:id="@+id/txt_add_book_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_add_book_publisher"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="Categories" />

                <TextView
                    android:id="@+id/txt_add_book_categories_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txt_add_book_categories"
                    android:layout_below="@+id/txt_add_book_publishedDate"
                    android:layout_marginRight="12dp"
                    android:layout_toRightOf="@+id/txt_add_book_categories"
                    android:fontFamily="sans-serif-normal"
                    android:padding="5dp"
                    tools:text="Computers" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>